fixed bug where indicator not showing up on chrome

--- a/app/style/battlechart.css
+++ b/app/style/battlechart.css
@@ -21,6 +21,11 @@
 	margin: auto;
 }
 
+#battlechartmid {
+	width: 100%;
+	height: auto;
+}
+
 #battlechart div {
 	display: flex;
 }
